Causeview Package Complete/ant script/retrieveUnpackaged/objects/Event__c.object
<CustomObject>
    <description>Causeview - No longer required.</description>
    <fields>
        <fullName>Actual_Payment_Date__c</fullName>
        <label>Actual Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue__c</fullName>
        <label>Actual Revenue</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appeal</label>
        <referenceTo>Appeal__c</referenceTo>
        <relationshipName>Special_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campus_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campus Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Sporting Event</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Special event association to a communication package.</description>
        <label>Comm Package</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Special_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Goal__c</fullName>
        <label>Event Goal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Payment_Date__c</fullName>
        <label>Expected Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Female__c</fullName>
        <label>Female</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipName>Special_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fundraising_Goal__c</fullName>
        <label>Fundraising Goal</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Itinerary_Desc__c</fullName>
        <label>Itinerary Desc</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Presentation__c</fullName>
        <label>Length of Presentation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <description>Name of location for event.</description>
        <label>Location Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Male__c</fullName>
        <label>Male</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Material_Requested__c</fullName>
        <label>Material Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Banners, Guest Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Organizer&apos;s Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising Toolkit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunger Banquet Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungry 4 Change Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Press Release Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Tips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxfam Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World Food Day Kit</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>No_Attended__c</fullName>
        <label>No Attended</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Invited__c</fullName>
        <label>No Invited</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Date_Time__c</fullName>
        <label>Presentation Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>State/Province</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sent_to_DRT__c</fullName>
        <description>Date the payment was sent to DRT for entry</description>
        <label>Sent to DRT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Speaker_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speaker Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending for Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Fundraiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy &amp; Outreach</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>(DEPRECATED)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>City__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Event No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(DEPRECATED)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>